--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     </head>
     <body>
         <header>
-    <img class="header_logo" src="img/logo.svg">
-   <div class="header_controls">
+    <img class="header__logo" src="img/logo.svg">
+   <div class="header__controls">
     <a href="#contacts">Контакты</a>
     <button>Заказать</button>
 </div>
         </header>
 <section class="about"> 
-    <div class="about_info">
+    <div class="about__info">
 <h1>Солнечные панели GreenRobotic</h1>
 <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
 <button>Узнать подробнее</button>
     </div>
-    <div class="about_images">
-        <img class="about_sun-image" src="img/sun.png">
-        <img class="about_image" src="img/solar-panel.png">
+    <div class="about__images">
+        <img class="about__sun-image" src="img/sun.png">
+        <img class="about__image" src="img/solar-panel.png">
     </div>
 </section>
     </body>
