--- a/index.html
+++ b/index.html
@@ -7,22 +7,52 @@
     </head>
     <body>
         <header>
-    <img class="header__logo" src="img/logo.svg">
-   <div class="header__controls">
-    <a href="#contacts">Контакты</a>
-    <button>Заказать</button>
-</div>
-        </header>
-<section class="about"> 
-    <div class="about__info">
-<h1>Солнечные панели GreenRobotic</h1>
-<p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-<button>Узнать подробнее</button>
-    </div>
-    <div class="about__images">
-        <img class="about__sun-image" src="img/sun.png">
-        <img class="about__image" src="img/solar-panel.png">
-    </div>
-</section>
+            <img class="header__logo" src="img/logo.svg">
+            <div class="header__controls"><a href="#contacts">Контакты</a>
+                <button>Заказать</button>
+            </div>
+        </header>    
+        <section class="about"> 
+            <div class="about__info">
+                <h1>Солнечные панели GreenRobotic</h1>
+                <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
+                <button>Узнать подробнее</button>
+            </div>
+            <div class="about__images">
+                <img class="about__sun-image" src="img/sun.png">
+                <img class="about__image" src="img/solar-panel.png">
+            </div>
+        </section>
+        <section class="form">
+            <div class="form__container">
+                <h1>Оставьте свои контакты</h1>
+                <p>Поможем подобрать модель.<br>Выбрать удобный вариант доставки и установки.<br>Гарантия возврата денег.</p>
+            </div>
+            <form>
+                <div class="form__group">
+                    <label for="name">Ваше имя</label>
+                    <input type="text" id="name" placeholder="Введите имя">
+                </div>
+                <div class="form__group">
+                    <label for="email">Электронный адрес:</label>
+                    <input type="email" id="email" placeholder="***@yandex.ru">
+                </div>
+                <div class="form__group">
+                    <label for="phone">Номер телефона:</label>
+                    <input type="tel" id="phone" placeholder="7 (999) 999-99-99">
+                </div>
+                <div class="form__group">
+                    <label for="budget">Примерный бюджет:</label>
+                    <select id="budget">
+                        <option value="" disabled selected>Выберите вариант</option>
+                        <option value="10-30">10 000₽ – 30 000₽</option>
+                        <option value="30-60">30 000₽ – 60 000₽</option>
+                        <option value="60-100">60 000₽ – 100 000₽</option>
+                        <option value="100+">100 000₽ и выше</option>
+                    </select>
+                </div>
+                <button type="submit" class="form__submit">Отправить заявку</button>
+            </form>
+        </section>
     </body>
 </html>
