Переделка всего проекто

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <body>
         <head>
             <title>Солнечные батареи GreenCorp</title>
-            <link rel="stylesheet" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
-            <header>
-                <img class="header__logo" src="img/logo.svg"><div class="header__contols">
-                    <a href="#contacts">Контакты</a>
-                    <button>Заказать</button>
-                </div>
-            </header>
+            <link rel="stylesheet" href="main.css">
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
         </head>
+        <header>
+            <img class="header__logo" src="img/logo.svg">
+            <div class="header__contols">
+                <a href="#contacts">Контакты</a>
+                <button>Заказать</button>
+            </div>
+        </header>
         <section class="about">
             <div class="about__info">
                 <h1>Солнечные панели GreenRobotic</h1>
@@ -20,6 +22,37 @@
             <div>
                 <img class="about__sun-image" src="img/sun.png">
                 <img class="about__image" src="img/solar-panel.png">
+            </div>
+        </section>
+        <section class="form">
+            <div class="form__container">
+                <h1>Оставьте свои контакты</h1>
+                <p>Поможем подобрать модель.<br> Выбрать удобный вариант доставки и установки. <br>Гарантия возврата денег. </p>
+                <form>
+                    <div class="form__group">
+                        <label for="name">Ваше имя</label>
+                        <input type="text" placeholder="Введите имя" id="name">
+                    </div>
+                    <div class="form__group">
+                        <label for="email">Электронный адрес</label>
+                        <input type="text" placeholder="***@yandex.ru" id="email">
+                    </div>
+                    <div class="form__group">
+                        <label for="phone">Номер телефона</label>
+                        <input type="number" placeholder="7 (999) 999-99-99" id="phone">
+                    </div>
+                    <div class="form__group">
+                        <label for="budget">Примерный бюджет</label>
+                        <select id="budget">
+                            <option value="">Выберите вариант</option>
+                            <option value="10-30">10 000₽ – 30 000₽</option>
+                            <option value="30-60">30 000₽ – 60 000₽</option>
+                            <option value="60-100">60 000₽ – 100 000₽</option>
+                            <option value="100+">100 000₽ и выше</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="form__submit">Отправить заявку</button>
+                </form>
             </div>
         </section>
     </body>
